add loader file

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,3 +10,4 @@
 @import url('./Hero-Section.css');
 @import url('./Order-Modal.css');
 @import url('./Popular-Products-Section.css');
+@import url('./loader.css');
