--- a/src/partials/Furniture-List-Section.html
+++ b/src/partials/Furniture-List-Section.html
@@ -183,7 +183,7 @@
               loading="lazy"
           /></picture>
         </li>
-        <li data-category-id="66504a50a1b2c3d4e5f6a7c2"> 
+        <li data-category-id="66504a50a1b2c3d4e5f6a7c2">
           <picture
             ><source
               srcset="
@@ -220,6 +220,7 @@
     <ul class="furniture-list"></ul>
     <div class="button-load-more">
       <button class="load-more-btn">Показати ще</button>
+      <div class="btn-loader hidden"></div>
     </div>
   </div>
 </section>
