modify furtiture css

--- a/src/partials/Furniture-List-Section.html
+++ b/src/partials/Furniture-List-Section.html
@@ -47,7 +47,7 @@
                 /img/image-categories/A-sleek-wooden-wardrobe@2x-min.png 2x
               " />
             <img
-              src="../img/image-categories/A-sleek-wooden-wardrobe-min.png"
+              src="/img/image-categories/A-sleek-wooden-wardrobe-min.png"
               class="img-categories"
               alt="Cabinets and storage systems"
               width="166"
