--- a/src/css/Furniture-List-Section.css
+++ b/src/css/Furniture-List-Section.css
@@ -229,6 +229,7 @@
       inset 0 2px 1px 0 rgba(255, 255, 255, 0.25),
       inset 0 32px 24px 0 rgba(255, 255, 255, 0.05);
     background: #6b0609;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   .load-more-btn:hover {
@@ -276,7 +277,12 @@
   background-color: #975052;
 }
 }
-
+.load-more-btn:hover{
+background-color: #975052;
+}
+.load-more-btn:focus{
+background-color: #975052;
+}
 .img-categories.active {
     outline: 8px solid #6b0609;
     
