del apostrophe in name of file img

--- a/src/partials/Furniture-List-Section.html
+++ b/src/partials/Furniture-List-Section.html
@@ -123,11 +123,11 @@
           <picture
             ><source
               srcset="
-                /img/image-categories/A-bright-and-playful-children's-room-min.png    1x,
-                /img/image-categories/A-bright-and-playful-children's-room@2x-min.png 2x
+                /img/image-categories/A-bright-and-playful-childrens-room-min.png    1x,
+                /img/image-categories/A-bright-and-playful-childrens-room@2x-min.png 2x
               " />
             <img
-              src="/img/image-categories/A-bright-and-playful-children's-room-min.png"
+              src="/img/image-categories/A-bright-and-playful-childrens-room-min.png"
               class="img-categories"
               alt="children's-room"
               width="166"
