--- a/src/css/Feedback-Section.css
+++ b/src/css/Feedback-Section.css
@@ -25,13 +25,18 @@
     color: #080c09;
 }
 
+.rating {
+    display: flex;
+    flex-direction: row;
+}
+
 .comment-descr{
     font-weight: 500;
     font-size: 20px;
     line-height: 1.6;
     color: #080c09;
     
-    margin-bottom: 24px;
+    margin: 24px 0;
 }
 
 .comment-name{
@@ -144,13 +149,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-
-.raty-star {
-    fill: #080c09;
-    width: 32px;
-    height: 32px;
-    display: inline-block;
 }
 
 @media screen and (min-width: 768px) {
