--- a/src/css/Popular-Products-Section.css
+++ b/src/css/Popular-Products-Section.css
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  max-width: 310px;
+  max-width: 280px;
 }
 
 .popular-swiper .product-name {
@@ -65,16 +65,11 @@
   justify-content: center;
   flex-direction: row;
   gap: 8px;
-
   border: 1px solid rgba(8, 12, 9, 0.15);
   border-radius: 100px;
   padding: 12px;
   width: 48px;
   height: 48px;
-
-  text-decoration: none;
-  border: none;
-  border-radius: 100px;
   cursor: pointer;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 0 1px 2px 0 rgba(8, 12, 9, 0.05),
@@ -95,12 +90,7 @@
 
 .popular-button-prev:focus,
 .popular-button-next:focus {
-  background-color: #975052;
-  box-shadow: 0 4px 12px rgba(107, 6, 9, 0.3),
-    inset 0 -2px 1px 0 rgba(0, 0, 0, 0.2), inset 0 0 0 1px rgba(8, 12, 9, 0.15),
-    inset 0 2px 1px 0 rgba(255, 255, 255, 0.25);
   outline: none;
-  fill: #fff;
 }
 
 .popular-button-prev.disabled,
@@ -111,8 +101,9 @@
   cursor: no-drop;
 }
 
-.swiper-pagination .popular-pagination {
+.popular-pagination {
   display: flex;
+  margin-right: auto;
 }
 
 .popular-swiper-controls {
@@ -120,4 +111,20 @@
   align-items: center;
   justify-content: space-between;
   margin-top: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .popular-swiper .swiper-slide {
+    max-width: 341px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .popular-header {
+    font-size: 48px;
+  }
+
+  .popular-swiper .swiper-slide {
+    max-width: 310px;
+  }
 }
