--- a/src/css/Popular-Products-Section.css
+++ b/src/css/Popular-Products-Section.css
@@ -1,13 +1,18 @@
+.popular-section {
+  padding: 48px 0;
+}
+
 .popular-header {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 16px;
-  font-weight: 700;
-  font-size: 48px;
   line-height: 1.2;
   text-align: center;
-  padding: 80px 0 32px;
+  padding-bottom: 32px;
+  font-weight: 700;
+  font-size: 36px;
+  letter-spacing: 0.01em;
 }
 
 .popular-swiper .swiper-wrapper {
@@ -26,14 +31,12 @@
   font-weight: 600;
   font-size: 18px;
   line-height: 1.6;
-  color: var(--color-scheme-1-text);
 }
 
 .popular-swiper .product-price {
   font-weight: 600;
   font-size: 20px;
   line-height: 1.6;
-  color: var(--color-scheme-1-text);
 }
 
 .popular-swiper .more-info {
@@ -111,17 +114,22 @@
   align-items: center;
   justify-content: space-between;
   margin-top: 20px;
+  gap: 16px;
 }
 
 @media screen and (min-width: 768px) {
   .popular-swiper .swiper-slide {
     max-width: 341px;
   }
+
+  .popular-header {
+    font-size: 48px;
+  }
 }
 
 @media screen and (min-width: 1440px) {
-  .popular-header {
-    font-size: 48px;
+  .popular-section {
+    padding: 80px 0;
   }
 
   .popular-swiper .swiper-slide {
