--- a/src/css/Furniture-List-Section.css
+++ b/src/css/Furniture-List-Section.css
@@ -200,7 +200,7 @@
     text-align: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .item-btn {
+  .btn-card {
     border-radius: 100px;
     padding: 10px 24px;
     width: 310px;
