--- a/src/css/Furniture-List-Section.css
+++ b/src/css/Furniture-List-Section.css
@@ -213,10 +213,8 @@
   .load-more-btn {
     font-weight: 500;
     font-size: 16px;
-
     width: 340px;
     height: 46px;
-
     line-height: 1.6;
     color: #fff;
     margin-top: 32px;
@@ -229,10 +227,9 @@
       inset 0 2px 1px 0 rgba(255, 255, 255, 0.25),
       inset 0 32px 24px 0 rgba(255, 255, 255, 0.05);
     background-color: #6b0609;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
-    , box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    ;
+    transition:
+      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   
