--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,12 +4,19 @@
       <nav class="footer-nav">
         <div class="footer-nav-logo">
           <a href="../index.html">
-            <svg class="footer-icon-logo-company" type="button" width="221" height="49">
+            <svg
+              class="footer-icon-logo-company"
+              type="button"
+              width="221"
+              height="49"
+            >
               <use href="./img/icons.svg#icon-company-logo"></use>
             </svg>
           </a>
         </div>
-        <p class="footer-copyright desktop">&copy; 2025 Relume. Всі права захищені.</p>
+        <p class="footer-copyright desktop">
+          &copy; 2025 Relume. Всі права захищені.
+        </p>
         <ul class="footer-nav-list">
           <li class="nav-link"><a href="#furniture">Наші меблі</a></li>
           <li class="nav-link"><a href="#about">Про нас</a></li>
@@ -19,28 +26,42 @@
       </nav>
       <ul class="footer-socials">
         <li class="social-link">
-          <a href="https://www.youtube.com/" target="_blank">
+          <a
+            href="https://www.youtube.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <svg width="24" height="24">
               <use href="./img/icons.svg#icon-youtube"></use>
             </svg>
           </a>
         </li>
         <li class="social-link">
-          <a href="https://www.facebook.com/" target="_blank">
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <svg width="24" height="24">
               <use href="./img/icons.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
         <li class="social-link">
-          <a href="https://www.instagram.com/" target="_blank">
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
             <svg width="24" height="24">
               <use href="./img/icons.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
       </ul>
-      <p class="footer-copyright phone">&copy; 2025 Relume. Всі права захищені.</p>
+      <p class="footer-copyright phone">
+        &copy; 2025 Relume. Всі права захищені.
+      </p>
     </div>
   </div>
 </footer>
