--- a/src/css/Furniture-List-Section.css
+++ b/src/css/Furniture-List-Section.css
@@ -227,9 +227,9 @@
       inset 0 2px 1px 0 rgba(255, 255, 255, 0.25),
       inset 0 32px 24px 0 rgba(255, 255, 255, 0.05);
     background-color: #6b0609;
-    transition:
-      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: 
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   
@@ -240,44 +240,38 @@
     justify-content: center;
   }
 
+  .btn-loader {
+    pointer-events: none;
+  }
+
   @media screen and (min-width: 768px) {
 
     .categories-list-item {
       
       gap: 24px;
-      
-      
     }
   }
 
-@media screen and (min-width: 1440px) {
-  .furniture-section{
-    padding: 80px 0;
-  }
-  .furniture-list{
-  row-gap: 40px;
-  }
-
+  @media screen and (min-width: 1440px) {
+    .furniture-section {
+      padding: 80px 0;
+    }
+  
+    .furniture-list {
+      row-gap: 40px;
+    }
+  
     .img-categories:hover {
-    outline:8px solid #ffffff;
-}
-.furniture-item-more:focus{
-  background-color: #975052;
-}
-.furniture-item-more:hover{
-  background-color: #975052;
-}
-.load-more-btn:hover {
-    box-shadow: 0 1px 2px 0 rgba(8, 12, 9, 0.05),
-      inset 0 -2px 1px 0 rgba(0, 0, 0, 0.2),
-      inset 0 0 0 1px rgba(8, 12, 9, 0.15),
-      inset 0 2px 1px 0 rgba(255, 255, 255, 0.25),
-      inset 0 32px 24px 0 rgba(255, 255, 255, 0.05);
-    background-color: #6b0609;
-    opacity: 0.5;
-  }
-}
+      outline: 8px solid #ffffff;
+    }
+  
+    .furniture-item-more:focus,
+    .furniture-item-more:hover {
+      background-color: #975052;
+    }
 
-.img-categories.active {
-    outline: 8px solid #6b0609;
-  } 
+    .load-more-btn:hover {
+      opacity: 0.8;
+      transform: translateY(-1px);
+    }
+  }
