--- a/src/partials/Furniture-List-Section.html
+++ b/src/partials/Furniture-List-Section.html
@@ -7,7 +7,8 @@
 
     <div class="categories-list">
       <ul class="categories-list-item">
-        <li data-category-id="all" class="categories-item" ><p class="img-categories-text">Всі товари</p>
+        <li data-category-id="all" class="categories-item">
+          <p class="img-categories-text">Всі товари</p>
           <picture
             ><source
               srcset="
@@ -23,7 +24,8 @@
               loading="lazy"
           /></picture>
         </li>
-        <li data-category-id="66504a50a1b2c3d4e5f6a7b8" class="categories-item"><p class="img-categories-text">М'які меблі</p>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7b8" class="categories-item">
+          <p class="img-categories-text">М'які меблі</p>
           <picture
             ><source
               srcset="
@@ -39,7 +41,8 @@
               loading="lazy"
           /></picture>
         </li>
-        <li data-category-id="66504a50a1b2c3d4e5f6a7b9" class="categories-item"><p class="img-categories-text">Шафи та системи зберігання</p>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7b9" class="categories-item">
+          <p class="img-categories-text">Шафи та системи зберігання</p>
           <picture
             ><source
               srcset="
@@ -55,7 +58,8 @@
               loading="lazy"
           /></picture>
         </li>
-        <li data-category-id="66504a50a1b2c3d4e5f6a7ba" class="categories-item"><p class="img-categories-text">Ліжка та матраци</p>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7ba" class="categories-item">
+          <p class="img-categories-text">Ліжка та матраци</p>
           <picture
             ><source
               srcset="
@@ -71,7 +75,8 @@
               loading="lazy"
           /></picture>
         </li>
-        <li data-category-id="66504a50a1b2c3d4e5f6a7bb" class="categories-item"><p class="img-categories-text">Столи</p>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7bb" class="categories-item">
+          <p class="img-categories-text">Столи</p>
           <picture
             ><source
               srcset="
@@ -87,7 +92,8 @@
               loading="lazy"
           /></picture>
         </li>
-        <li data-category-id="66504a50a1b2c3d4e5f6a7bc" class="categories-item"><p class="img-categories-text">Стільці та табурети</p>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7bc" class="categories-item">
+          <p class="img-categories-text">Стільці та табурети</p>
           <picture
             ><source
               srcset="
@@ -103,7 +109,8 @@
               loading="lazy"
           /></picture>
         </li>
-        <li data-category="66504a50a1b2c3d4e5f6a7bd" class="categories-item"><p class="img-categories-text">Кухні</p>
+        <li data-category="66504a50a1b2c3d4e5f6a7bd" class="categories-item">
+          <p class="img-categories-text">Кухні</p>
           <picture
             ><source
               srcset="
@@ -119,7 +126,8 @@
               loading="lazy"
           /></picture>
         </li>
-        <li data-category-id="66504a50a1b2c3d4e5f6a7be" class="categories-item"><p class="img-categories-text">Меблі для дитячої</p>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7be" class="categories-item">
+          <p class="img-categories-text">Меблі для дитячої</p>
           <picture
             ><source
               srcset="
@@ -135,7 +143,8 @@
               loading="lazy"
           /></picture>
         </li>
-        <li data-category-id="66504a50a1b2c3d4e5f6a7bf" class="categories-item"><p class="img-categories-text">Меблі для офісу</p>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7bf" class="categories-item">
+          <p class="img-categories-text">Меблі для офісу</p>
           <picture
             ><source
               srcset="
@@ -151,7 +160,8 @@
               loading="lazy"
           /></picture>
         </li>
-        <li data-category-id="66504a50a1b2c3d4e5f6a7c0" class="categories-item"><p class="img-categories-text">Меблі для передпокою</p>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7c0" class="categories-item">
+          <p class="img-categories-text">Меблі для передпокою</p>
           <picture
             ><source
               srcset="
@@ -167,7 +177,8 @@
               loading="lazy"
           /></picture>
         </li>
-        <li data-category-id="66504a50a1b2c3d4e5f6a7c1" class="categories-item"><p class="img-categories-text">Меблі для ванної кімнати</p>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7c1" class="categories-item">
+          <p class="img-categories-text">Меблі для ванної кімнати</p>
           <picture
             ><source
               srcset="
@@ -183,7 +194,8 @@
               loading="lazy"
           /></picture>
         </li>
-        <li data-category-id="66504a50a1b2c3d4e5f6a7c2" class="categories-item"><p class="img-categories-text">Садові та вуличні меблі</p>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7c2" class="categories-item">
+          <p class="img-categories-text">Садові та вуличні меблі</p>
           <picture
             ><source
               srcset="
@@ -199,7 +211,8 @@
               loading="lazy"
           /></picture>
         </li>
-        <li data-category-id="66504a50a1b2c3d4e5f6a7c3" class="categories-item"><p class="img-categories-text">Декор та аксесуари</p>
+        <li data-category-id="66504a50a1b2c3d4e5f6a7c3" class="categories-item">
+          <p class="img-categories-text">Декор та аксесуари</p>
           <picture
             ><source
               srcset="
