--- a/src/css/Popular-Products-Section.css
+++ b/src/css/Popular-Products-Section.css
@@ -108,6 +108,18 @@
   display: flex;
   margin-right: auto;
 }
+.popular-pagination .swiper-pagination-bullet {
+    width: 8px;
+    height: 8px;
+    opacity: 1;
+    border-radius: 100%;
+    background-color: #C9C9C9;
+    margin: 0 4px;
+}
+
+.popular-pagination .swiper-pagination-bullet-active {
+    background-color: #080c09;
+}
 
 .popular-swiper-controls {
   display: flex;
