--- a/src/partials/Furniture-Details-Modal.html
+++ b/src/partials/Furniture-Details-Modal.html
@@ -1,7 +1,7 @@
 <div class="product-modal-overlay" data-modal-item>
     <div class="container">
         <div class="product-modal">
-            <button type="button" class="modal-close-btn" data-model-close>
+            <button type="button" class="modal-close-btn" data-modal-close-furniture>
                 <svg width="32" height="32">
                     <use href="../img/icons.svg#icon-x-close">
                     </use>
