--- a/src/partials/Popular-Products-Section.html
+++ b/src/partials/Popular-Products-Section.html
@@ -3,7 +3,10 @@
     <h2 class="popular-header">Популярні товари</h2>
 
     <div class="swiper popular-swiper">
-      <div class="swiper-wrapper" id="popular-products-wrapper"></div>
+      <div class="swiper-wrapper" id="popular-products-wrapper">
+        <!-- js creates carosel -->
+      </div>
+
       <div class="popular-swiper-controls">
         <div class="swiper-pagination popular-pagination"></div>
         <button class="popular-button-prev">
