add styles for button

--- a/src/partials/Furniture-List-Section.html
+++ b/src/partials/Furniture-List-Section.html
@@ -232,7 +232,7 @@
     </div>
     <ul class="furniture-list"></ul>
     <div class="button-load-more">
-      <button class="load-more-btn">Показати ще</button>
+      <button class="load-more-btn-furniture">Показати ще</button>
       <div class="btn-loader hidden"></div>
     </div>
   </div>
