--- a/src/partials/Hero-Section.html
+++ b/src/partials/Hero-Section.html
@@ -7,7 +7,7 @@
       функціональність.
     </p>
     <a
-      href="#Feedback-Section"
+      href="#feedback"
       class="main-button"
       aria-label="Перейти до відгуків клієнтів"
     >
