--- a/src/css/Popular-Products-Section.css
+++ b/src/css/Popular-Products-Section.css
@@ -51,17 +51,23 @@
   padding: 10px 24px;
   width: 100%;
   height: 46px;
-  background: #f5f6f5;
+  background: rgba(8, 12, 9, 0.05);
   color: #0a0a0a;
   font-weight: 500;
   font-size: 16px;
   border: none;
   cursor: pointer;
-  transition: all 0.2s ease;
+  box-shadow:
+        inset 0 0 0 1px rgba(8, 12, 9, 0.02),
+        inset 0 -2px 1px 0 rgba(0, 0, 0, 0.02),
+        inset 0 1px 2px 0 rgba(56, 62, 58, 0.02),
+        inset 0 2px 1px 0 rgba(255, 255, 255, 0.05),
+        inset 0 32px 24px 0 rgba(8, 12, 9, 0.05);
+        transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .popular-swiper .more-info:hover {
-  background: #eeeeee;
+  background:  #d7d5d5ec;
 }
 
 .popular-button-prev,
