--- a/src/css/header.css
+++ b/src/css/header.css
@@ -227,16 +227,22 @@
         font-weight: 500;
         line-height: 1.6;
         color: #FFFFFF;
-
-        box-shadow: 0 1px 2px 0 rgba(8, 12, 9, 0.05), inset 0 -2px 1px 0 rgba(0, 0, 0, 0.2), inset 0 0 0 1px rgba(8, 12, 9, 0.15), inset 0 2px 1px 0 rgba(255, 255, 255, 0.25), inset 0 32px 24px 0 rgba(8, 12, 9, 0.05);
+        transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        box-shadow: 0 1px 2px 0 rgba(8, 12, 9, 0.05), 
+        inset 0 -2px 1px 0 rgba(0, 0, 0, 0.2), 
+        inset 0 0 0 1px rgba(8, 12, 9, 0.15), 
+        inset 0 2px 1px 0 rgba(255, 255, 255, 0.25), 
+        inset 0 32px 24px 0 rgba(8, 12, 9, 0.05);
 
         &:hover {
-            opacity: 0.5;
+            opacity: 0.8;
         }
 
         &:focus {
-            opacity: 0.5;
+            opacity: 0.8;
         }
+
+        
     }
 
     .link-header:hover {
