--- a/src/css/Furniture-Details-Modal.css
+++ b/src/css/Furniture-Details-Modal.css
@@ -30,6 +30,11 @@
   box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
 }
 
+.product-rating-container img {
+  width: 15px !important;
+  height: 15px !important;
+}
+
 .modal-close-btn {
   position: absolute;
   top: 16px;
@@ -56,7 +61,7 @@
 .modal-content-wrapper {
   display: flex;
   flex-direction: column;
-  padding-top: 48px;
+  padding-top: 24px;
 }
 
 .modal-gallery-mobile-wrapper {
@@ -81,7 +86,7 @@
 }
 
 .modal-product-title {
-  font-size: 24px;
+  font-size: 16px;
   font-weight: 700;
   letter-spacing: 0.01em;
   margin: 0 0 8px 0;
@@ -182,6 +187,11 @@ body.modal-open {
   overflow: hidden;
 }
 
+.product-rating-container {
+  display: flex;
+  margin-bottom: 24px;
+}
+
 @media screen and (min-width: 768px) {
   .product-modal-overlay {
     padding: 40px;
@@ -208,7 +218,7 @@ body.modal-open {
   }
   
   .modal-product-title {
-    font-size: 28px;
+    font-size: 32px;
   }
   
   .modal-product-description,
@@ -217,9 +227,9 @@ body.modal-open {
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1440px) {
   .product-modal {
-    max-width: 800px;
+    max-width: 1090px;
     padding: 40px;
   }
   
@@ -232,9 +242,14 @@ body.modal-open {
   }
   
   .modal-gallery-mobile-wrapper img:nth-child(n + 2) {
+    width: calc(50% - 9px);
     height: 200px;
   }
   
+  .modal-product-title {
+    font-size: 40px;
+  }
+
   .modal-product-title {
     font-size: 32px;
   }
@@ -242,5 +257,20 @@ body.modal-open {
   .modal-product-description,
   .modal-product-size {
     font-size: 16px;
+  }
+
+  .product-info-wrapper {
+    display: flex;
+    gap: 24px;
+  }
+
+  .furniture-content{
+    display: flex;
+    flex-direction: column;
+    width: 580px;
+  }
+
+  .modal-product-description{
+    margin-bottom: 30px;
   }
 }
