--- a/src/partials/Furniture-List-Section.html
+++ b/src/partials/Furniture-List-Section.html
@@ -109,7 +109,7 @@
               loading="lazy"
           /></picture>
         </li>
-        <li data-category="66504a50a1b2c3d4e5f6a7bd" class="categories-item">
+        <li data-category-id="66504a50a1b2c3d4e5f6a7bd" class="categories-item">
           <p class="img-categories-text">Кухні</p>
           <picture
             ><source
