add popular in footer

--- a/src/partials/Furniture-Details-Modal.html
+++ b/src/partials/Furniture-Details-Modal.html
@@ -3,7 +3,7 @@
         <div class="product-modal">
             <button type="button" class="modal-close-btn" data-modal-close-furniture>
                 <svg width="32" height="32">
-                    <use href="../img/icons.svg#icon-x-close">
+                    <use href="./img/icons.svg#icon-x-close">
                     </use>
                 </svg>
             </button>
