--- a/src/partials/Popular-Products-Section.html
+++ b/src/partials/Popular-Products-Section.html
@@ -1,4 +1,4 @@
-<section class="popular-section">
+<section class="popular-section" id="popular">
   <div class="container">
     <h2 class="popular-header">Популярні товари</h2>
 
