--- a/src/css/Furniture-Details-Modal.css
+++ b/src/css/Furniture-Details-Modal.css
@@ -194,33 +194,33 @@ body.modal-open {
 
 @media screen and (min-width: 768px) {
   .product-modal-overlay {
-    padding: 40px;
+    padding: 40px
   }
-  
+
   .product-modal {
     max-width: 700px;
     padding: 32px;
   }
-  
+
   .modal-close-btn {
     top: 20px;
     right: 20px;
     width: 36px;
     height: 36px;
   }
-  
+
   .modal-gallery-mobile-wrapper img:first-child {
     height: 320px;
   }
-  
+
   .modal-gallery-mobile-wrapper img:nth-child(n + 2) {
     height: 180px;
   }
-  
+
   .modal-product-title {
     font-size: 32px;
   }
-  
+
   .modal-product-description,
   .modal-product-size {
     font-size: 15px;
@@ -232,20 +232,20 @@ body.modal-open {
     max-width: 1090px;
     padding: 40px;
   }
-  
+
   .modal-gallery-mobile-wrapper {
     gap: 16px;
   }
-  
+
   .modal-gallery-mobile-wrapper img:first-child {
     height: 380px;
   }
-  
+
   .modal-gallery-mobile-wrapper img:nth-child(n + 2) {
     width: calc(50% - 9px);
     height: 200px;
   }
-  
+
   .modal-product-title {
     font-size: 40px;
   }
@@ -253,7 +253,7 @@ body.modal-open {
   .modal-product-title {
     font-size: 32px;
   }
-  
+
   .modal-product-description,
   .modal-product-size {
     font-size: 16px;
@@ -264,13 +264,13 @@ body.modal-open {
     gap: 24px;
   }
 
-  .furniture-content{
+  .furniture-content {
     display: flex;
     flex-direction: column;
     width: 580px;
   }
 
-  .modal-product-description{
+  .modal-product-description {
     margin-bottom: 30px;
   }
 }
