--- a/src/css/Order-Modal.css
+++ b/src/css/Order-Modal.css
@@ -19,7 +19,7 @@ textarea:focus::placeholder {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.25);
+  background-color: rgba(0, 0, 0, 0.6);
   z-index: 1000;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -47,6 +47,7 @@ textarea:focus::placeholder {
   height: 100%;
   border-radius: 8px;
   padding: 64px 20px;
+  overflow-y: auto;
 }
 
 .modal-open {
