--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
     <div class="footer-container">
       <nav class="footer-nav">
         <div class="footer-nav-logo">
-          <a href="../index.html">
+          <a href="/index.html">
             <svg
               class="footer-icon-logo-company"
               type="button"
