add update file

--- a/src/partials/FAQ-Section.html
+++ b/src/partials/FAQ-Section.html
@@ -4,7 +4,7 @@
         <div class="accordion-container">
             <div class="ac">
                 <p class="ac-header">
-                    <button type="button" class="ac-trigger">
+                    <button class="ac-trigger">
                         Як здійснюється доставка меблів?
                         <svg width="32" height="32" class="ac-trigger-icon">
                             <use href="./img/icons.svg#icon-icon-faq"></use>
@@ -20,7 +20,7 @@
             </div>
             <div class="ac">
                 <p class="ac-header">
-                    <button type="button" class="ac-trigger">
+                    <button class="ac-trigger">
                         Чи є можливість вибрати колір або матеріал?
                         <svg width="32" height="32" class="ac-trigger-icon">
                             <use href="./img/icons.svg#icon-icon-faq"></use>
@@ -36,7 +36,7 @@
             </div>
             <div class="ac">
                 <p class="ac-header">
-                    <button type="button" class="ac-trigger">
+                    <button class="ac-trigger">
                         Чи можна повернути товар, якщо він не підійшов?
                         <svg width="32" height="32" class="ac-trigger-icon">
 
@@ -53,7 +53,7 @@
             </div>
             <div class="ac">
                 <p class="ac-header">
-                    <button type="button" class="ac-trigger">
+                    <button class="ac-trigger">
                         Чи надаєте ви послугу збирання меблів?
                         <svg width="32" height="32" class="ac-trigger-icon">
 
@@ -70,7 +70,7 @@
             </div>
             <div class="ac">
                 <p class="ac-header">
-                    <button type="button" class="ac-trigger">
+                    <button class="ac-trigger">
                         Як здійснити оплату?
                         <svg width="32" height="32" class="ac-trigger-icon">
                             <use href="./img/icons.svg#icon-icon-faq"></use>
