--- a/src/partials/Feedback-Section.html
+++ b/src/partials/Feedback-Section.html
@@ -15,13 +15,13 @@
     <div class="feedback-swiper-interaction-wrapp">
       <div class="swiper-pagination feedback-pagination"></div>
       <div class="feedback-btn-wrapper">
-        <button type="button" class="feedback-swiper-button-prev">
-          <svg class="feedback-icon-left-arrow" type="button" width="158" height="35">
+        <button class="feedback-swiper-button-prev">
+          <svg class="feedback-icon-left-arrow" width="158" height="35">
             <use href="./img/icons.svg#icon-left-arrow"></use>
           </svg>
         </button>
-        <button type="button" class="feedback-swiper-button-next">
-          <svg class="feedback-icon-right-arrow" type="button" width="158" height="35">
+        <button class="feedback-swiper-button-next">
+          <svg class="feedback-icon-right-arrow" width="158" height="35">
             <use href="./img/icons.svg#icon-right-arrow"></use>
           </svg>
         </button>
