--- a/src/partials/Furniture-Details-Modal.html
+++ b/src/partials/Furniture-Details-Modal.html
@@ -1,15 +1,14 @@
 <div class="product-modal-overlay" data-modal-item>
-    <div class="container">
-        <div class="product-modal">
-            <button type="button" class="modal-close-btn" data-modal-close-furniture>
-                <svg width="32" height="32">
-                    <use href="../img/icons.svg#icon-x-close">
-                    </use>
-                </svg>
-            </button>
+  <div class="container">
+    <div class="product-modal">
+      <button class="modal-close-btn" data-modal-close-furniture>
+        <svg width="32" height="32">
+          <use href="../img/icons.svg#icon-x-close"></use>
+        </svg>
+      </button>
 
-            <div class="modal-content-wrapper"></div>
-        </div>
+      <div class="modal-content-wrapper"></div>
     </div>
+  </div>
 </div>
 <div class="menu-overlay" id="menu-overlay"></div>
