--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,79 +1,79 @@
 <header class="page-header">
-    <div class="container">
-        <nav class="navigation" role="navigation">
+  <div class="container">
+    <nav class="navigation" role="navigation">
+      <a class="logo-header" href="./index.html">
+        <svg class="icon-logo-company" width="158" height="35">
+          <use href="./img/icons.svg#icon-company-logo"></use>
+        </svg>
+      </a>
 
-            <a class="logo-header" href="./index.html">
-                <svg class="icon-logo-company" type="button" width="158" height="35">
-                    <use href="./img/icons.svg#icon-company-logo"></use>
-                </svg>
-            </a>
+      <button
+        class="menu-toggle-btn"
+        id="menu-open-btn"
+        aria-controls="mobile-menu-container"
+        aria-expanded="false"
+      >
+        <svg class="icon-logo-company" width="32" height="32">
+          <use href="./img/icons.svg#icon-burger-menu"></use>
+        </svg>
+      </button>
 
-            <button class="menu-toggle-btn" type="button" id="menu-open-btn" aria-controls="mobile-menu-container"
-                aria-expanded="false">
-                <svg class="icon-logo-company" type="button" width="32" height="32">
-                    <use href="./img/icons.svg#icon-burger-menu"></use>
-                </svg>
-            </button>
+      <div class="desktop-nav-group">
+        <ul class="site-navigation" id="desktop-nav">
+          <li class="link-header">
+            <a href="#furniture">Наші меблі</a>
+          </li>
+          <li class="link-header">
+            <a href="#about">Про нас</a>
+          </li>
+          <li class="link-header">
+            <a href="#popular">Популярне</a>
+          </li>
+          <li class="link-header">
+            <a href="#faq">Часті питання</a>
+          </li>
+          <li class="link-header">
+            <a href="#feedback">Відгуки</a>
+          </li>
+        </ul>
+        <button class="btn-header" id="desktop-btn">До покупок</button>
+      </div>
 
+      <div class="mobile-menu" id="mobile-menu-container">
+        <a class="logo-header" href="./index.html">
+          <svg class="icon-logo-company" width="158" height="35">
+            <use href="./img/icons.svg#icon-company-logo"></use>
+          </svg>
+        </a>
 
-            <div class="desktop-nav-group">
-                <ul class="site-navigation" id="desktop-nav">
-                    <li class="link-header">
-                        <a href="#furniture">Наші меблі</a>
-                    </li>
-                    <li class="link-header">
-                        <a href="#about">Про нас</a>
-                    </li>
-                    <li class="link-header">
-                        <a href="#popular">Популярне</a>
-                    </li>
-                    <li class="link-header">
-                        <a href="#faq">Часті питання</a>
-                    </li>
-                    <li class="link-header">
-                        <a href="#feedback">Відгуки</a>
-                    </li>
-                </ul>
-                <button class="btn-header" id="desktop-btn">До покупок</button>
-            </div>
+        <button class="menu-close-btn" id="menu-close-btn">
+          <svg class="icon-logo-company" width="32" height="32">
+            <use href="./img/icons.svg#icon-x-close"></use>
+          </svg>
+        </button>
 
-            <div class="mobile-menu" id="mobile-menu-container">
-
-                <a class="logo-header" href="./index.html">
-                    <svg class="icon-logo-company" type="button" width="158" height="35">
-                        <use href="./img/icons.svg#icon-company-logo"></use>
-                    </svg>
-                </a>
-
-                <button class="menu-close-btn" id="menu-close-btn">
-                    <svg class="icon-logo-company" type="button" width="32" height="32">
-                        <use href="./img/icons.svg#icon-x-close"></use>
-                    </svg>
-                </button>
-
-                <div class="menu-content-group">
-                    <ul class="site-navigation" id="mobile-nav">
-                        <li class="link-header">
-                            <a href="#furniture">Наші меблі</a>
-                        </li>
-                        <li class="link-header">
-                            <a href="#about">Про нас</a>
-                        </li>
-                        <li class="link-header">
-                            <a href="#popular">Популярне</a>
-                        </li>
-                        <li class="link-header">
-                            <a href="#faq">Часті питання</a>
-                        </li>
-                        <li class="link-header">
-                            <a href="#feedback">Відгуки</a>
-                        </li>
-                    </ul>
-                    <button class="btn-header" id="mobile-btn">До покупок</button>
-                </div>
-
-            </div>
-        </nav>
-    </div>
+        <div class="menu-content-group">
+          <ul class="site-navigation" id="mobile-nav">
+            <li class="link-header">
+              <a href="#furniture">Наші меблі</a>
+            </li>
+            <li class="link-header">
+              <a href="#about">Про нас</a>
+            </li>
+            <li class="link-header">
+              <a href="#popular">Популярне</a>
+            </li>
+            <li class="link-header">
+              <a href="#faq">Часті питання</a>
+            </li>
+            <li class="link-header">
+              <a href="#feedback">Відгуки</a>
+            </li>
+          </ul>
+          <button class="btn-header" id="mobile-btn">До покупок</button>
+        </div>
+      </div>
+    </nav>
+  </div>
 </header>
 <div class="menu-overlay" id="menu-overlay"></div>
