--- a/src/css/Furniture-List-Section.css
+++ b/src/css/Furniture-List-Section.css
@@ -200,7 +200,8 @@
   .item-btn {
     border-radius: 100px;
     padding: 10px 24px;
-    width: 310px;
+    width: 100%;
+    max-width: 310px;
     height: 46px;
     font-weight: 500;
     font-size: 16px;
