--- a/src/css/Furniture-Details-Modal.css
+++ b/src/css/Furniture-Details-Modal.css
@@ -179,6 +179,30 @@
   transition: background-color 0.3s ease;
 }
 
+.color-button {
+  border: 3px solid transparent;
+  box-shadow:
+    inset 0 1px 3px rgba(0, 0, 0, 0.15),
+    inset 0 -2px 1px 0 rgba(0, 0, 0, 0.02),
+    inset 0 1px 2px 0 rgba(56, 62, 58, 0.02),
+    inset 0 2px 1px 0 rgba(255, 255, 255, 0.05),
+    inset 0 32px 24px 0 rgba(8, 12, 9, 0.05);
+  transition: border 0.2s ease-in-out;
+}
+
+.color-button-white {
+  border: 1px solid #ccc;
+}
+
+.color-button.is-active {
+  border: 4px solid #838584;
+}
+
+.color-button-white.is-active {
+
+  border: 4px solid #838584;
+}
+
 .modal-order-btn:hover {
   background: #5a0508;
 }
@@ -194,6 +218,25 @@ body.modal-open {
 .product-rating-container {
   display: flex;
   margin-bottom: 24px;
+}
+
+.menu-overlay-modal {
+  position: fixed;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  background-color: rgba(8, 12, 9, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 50;
+}
+
+.menu-overlay-modal.is-visible {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 
 @media screen and (min-width: 768px) {
