--- a/src/partials/Furniture-Details-Modal.html
+++ b/src/partials/Furniture-Details-Modal.html
@@ -12,4 +12,4 @@
         </div>
     </div>
 </div>
-<div class="menu-overlay" id="menu-overlay"></div>
+<div class="menu-overlay-modal" id="menu-overlay-modal"></div>
