add update file

--- a/src/partials/Furniture-List-Section.html
+++ b/src/partials/Furniture-List-Section.html
@@ -67,7 +67,7 @@
                 /img/image-categories/A-queen-size-bed-min.png 2x
               " />
             <img
-              src="/img/image-categories/A-queen-size bed-min.png"
+              src="/img/image-categories/A-queen-size-bed-min.png"
               class="img-categories"
               alt="beds and mattresses"
               width="166"
