--- a/src/css/header.css
+++ b/src/css/header.css
@@ -76,6 +76,10 @@
     line-height: 1.6;
 }
 
+.link-header a {
+    transition: all 250ms ease;
+}
+
 .menu-content-group .btn-header {
     display: flex;
     align-items: center;
@@ -197,14 +201,12 @@
     .link-header a {
         font-weight: 400;
         font-size: 16px;
-        transition: opacity 250ms ease;
         padding: 20px 0;
     }
 
     .link-header a:hover,
     .link-header a:focus {
-        opacity: 0.7;
-        text-decoration: underline;
+        opacity: 0.5;
         color: #920d11;
     }
 
@@ -228,11 +230,11 @@
         line-height: 1.6;
         color: #FFFFFF;
         transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        box-shadow: 0 1px 2px 0 rgba(8, 12, 9, 0.05), 
-        inset 0 -2px 1px 0 rgba(0, 0, 0, 0.2), 
-        inset 0 0 0 1px rgba(8, 12, 9, 0.15), 
-        inset 0 2px 1px 0 rgba(255, 255, 255, 0.25), 
-        inset 0 32px 24px 0 rgba(8, 12, 9, 0.05);
+        box-shadow: 0 1px 2px 0 rgba(8, 12, 9, 0.05),
+            inset 0 -2px 1px 0 rgba(0, 0, 0, 0.2),
+            inset 0 0 0 1px rgba(8, 12, 9, 0.15),
+            inset 0 2px 1px 0 rgba(255, 255, 255, 0.25),
+            inset 0 32px 24px 0 rgba(8, 12, 9, 0.05);
 
         &:hover {
             opacity: 0.8;
@@ -242,15 +244,7 @@
             opacity: 0.8;
         }
 
-        
-    }
 
-    .link-header:hover {
-        color: #6B0609;
-    }
-
-    .site-navigation:focus {
-        color: #6B0609;
     }
 
     .menu-toggle-btn {
