--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,7 +4,7 @@
       <nav class="footer-nav">
         <div class="footer-nav-logo">
 
-          <a href="/index.html">
+          <a href="./index.html">
 
             <svg class="footer-icon-logo-company" width="221" height="49">
 
