--- a/src/partials/Furniture-List-Section.html
+++ b/src/partials/Furniture-List-Section.html
@@ -8,229 +8,156 @@
     <div class="categories-list">
       <ul class="categories-list-item">
         <li data-category-id="all" class="categories-item">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-stylish-furniture-showroom-min.png    1x,
                 /img/image-categories/A-stylish-furniture-showroom@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-stylish-furniture-showroom-min.png"
-              class="img-categories active"
-              alt="all articles"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-stylish-furniture-showroom-min.png" class="img-categories active"
+              alt="all articles" width="166" height="122" loading="lazy" />
+          </picture>
           <p class="img-categories-text">Всі товари</p>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7b8" class="categories-item">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-modern-fabric-sofa-min.png    1x,
                 /img/image-categories/A-modern-fabric-sofa@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-modern-fabric-sofa-min.png"
-              class="img-categories"
-              alt="Upholstered furniture"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-modern-fabric-sofa-min.png" class="img-categories"
+              alt="Upholstered furniture" width="166" height="122" loading="lazy" />
+          </picture>
           <p class="img-categories-text"></p>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7b9" class="categories-item">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-sleek-wooden-wardrobe-min.png    1x,
                 /img/image-categories/A-sleek-wooden-wardrobe@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-sleek-wooden-wardrobe-min.png"
-              class="img-categories"
-              alt="Cabinets and storage systems"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-sleek-wooden-wardrobe-min.png" class="img-categories"
+              alt="Cabinets and storage systems" width="166" height="122" loading="lazy" />
+          </picture>
           <p class="img-categories-text"></p>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7ba" class="categories-item">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-queen-size-bed-min.png 1x,
                 /img/image-categories/A-queen-size-bed-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-queen-size-bed-min.png"
-              class="img-categories"
-              alt="beds and mattresses"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-queen-size-bed-min.png" class="img-categories" alt="beds and mattresses"
+              width="166" height="122" loading="lazy" />
+          </picture>
           <p class="img-categories-text"></p>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7bb" class="categories-item">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-modern-oak-dining-table-min.png    1x,
                 /img/image-categories/A-modern-oak-dining-table@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-modern-oak-dining-table-min.png"
-              class="img-categories"
-              alt="tables"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-modern-oak-dining-table-min.png" class="img-categories" alt="tables"
+              width="166" height="122" loading="lazy" />
+          </picture>
           <p class="img-categories-text"></p>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7bc" class="categories-item">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-set-of-four-elegant-wooden-dining-chairs-min.png    1x,
                 /img/image-categories/A-set-of-four-elegant-wooden-dining-chairs@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-set-of-four-elegant-wooden-dining-chairs-min.png"
-              class="img-categories"
-              alt="chairs and stools"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-set-of-four-elegant-wooden-dining-chairs-min.png" class="img-categories"
+              alt="chairs and stools" width="166" height="122" loading="lazy" />
+          </picture>
           <p class="img-categories-text"></p>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7bd" class="categories-item">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-modern-open-kitchen-interior-min.png    1x,
                 /img/image-categories/A-modern-open-kitchen-interior@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-modern-open-kitchen-interior-min.png"
-              class="img-categories"
-              alt="kitchens"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-modern-open-kitchen-interior-min.png" class="img-categories"
+              alt="kitchens" width="166" height="122" loading="lazy" />
+          </picture>
           <p class="img-categories-text"></p>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7be" class="categories-item">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-bright-and-playful-childrens-room-min.png    1x,
                 /img/image-categories/A-bright-and-playful-childrens-room@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-bright-and-playful-childrens-room-min.png"
-              class="img-categories"
-              alt="children's-room"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-bright-and-playful-childrens-room-min.png" class="img-categories"
+              alt="children's-room" width="166" height="122" loading="lazy" />
+          </picture>
           <p class="img-categories-text"></p>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7bf" class="categories-item">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-modern-home-min.png    1x,
                 /img/image-categories/A-modern-home@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-modern-home-min.png"
-              class="img-categories"
-              alt="modern-home"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-modern-home-min.png" class="img-categories" alt="modern-home" width="166"
+              height="122" loading="lazy" />
+          </picture>
           <p class="img-categories-text"></p>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7c0" class="categories-item">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-stylish-entryway-min.png    1x,
                 /img/image-categories/A-stylish-entryway@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-stylish-entryway-min.png"
-              class="img-categories"
-              alt="modern-home"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-stylish-entryway-min.png" class="img-categories" alt="modern-home"
+              width="166" height="122" loading="lazy" />
+          </picture>
           <p class="img-categories-text"></p>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7c1" class="categories-item">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-contemporary-bathroom-min.png    1x,
                 /img/image-categories/A-contemporary-bathroom@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-contemporary-bathroom-min.png"
-              class="img-categories"
-              alt="modern-home"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-contemporary-bathroom-min.png" class="img-categories" alt="modern-home"
+              width="166" height="122" loading="lazy" />
+          </picture>
           <p class="img-categories-text"></p>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7c2" class="categories-item">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-cozy-outdoor-patio-scene-min.png    1x,
                 /img/image-categories/A-cozy-outdoor-patio-scene@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-cozy-outdoor-patio-scene-min.png"
-              class="img-categories"
-              alt="modern-home"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-cozy-outdoor-patio-scene-min.png" class="img-categories" alt="modern-home"
+              width="166" height="122" loading="lazy" />
+          </picture>
           <p class="img-categories-text"></p>
         </li>
         <li data-category-id="66504a50a1b2c3d4e5f6a7c3" class="categories-item">
-          <picture
-            ><source
-              srcset="
+          <picture>
+            <source srcset="
                 /img/image-categories/A-curated-collection-of-home-decor-min.png    1x,
                 /img/image-categories/A-curated-collection-of-home-decor@2x-min.png 2x
               " />
-            <img
-              src="/img/image-categories/A-curated-collection-of-home-decor-min.png"
-              class="img-categories"
-              alt="modern-home"
-              width="166"
-              height="122"
-              loading="lazy"
-          /></picture>
+            <img src="/img/image-categories/A-curated-collection-of-home-decor-min.png" class="img-categories"
+              alt="modern-home" width="166" height="122" loading="lazy" />
+          </picture>
           <p class="img-categories-text"></p>
         </li>
       </ul>
     </div>
     <ul class="furniture-list"></ul>
+
+    <p class="no-furniture-message" style="display: none;">
+      На жаль, в цій категорії поки що немає товарів
+    </p>
+
     <div class="button-load-more">
       <button class="load-more-btn-furniture">Показати ще</button>
       <div class="btn-loader hidden"></div>
